--- a/Code4/package.json
+++ b/Code4/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^4.8.6",
     "morgan": "~1.9.1",
     "nodemailer": "^3.1.5",
+    "ot": "git+https://github.com/Operational-Transformation/ot.js.git",
     "passport": "^0.3.2",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
